<resources>
    <string name="app_name">MyKadai12</string>
    <string name="tv_title">必要な情報を入力してください</string>
    <string name="tv_name">名前</string>
    <string name="tv_male">メールアドレス</string>
    <string name="tv_maletitle">タイトル</string>
    <string name="tv_comment">質問内容</string>
    <string name="bt_confilm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>
    <string name="d_b">確認</string>
    <string name="d_title">内容確認</string>
    <
</resources>